# ZipViewer

./: CMakeLists.txt  LICENSE  README.md
inc/: FileInfo.h  TableModel.h  mainwindow.h
src/: FileInfo.cpp  TableModel.cpp  main.cpp  mainwindow.cpp
